test/error/macro_illegal_name.sv
// pattern: illegal macro name: define
`define define
